--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -61,7 +61,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\AnimatedTexture.cs" />
+    <Compile Include="Assets\Scripts\DestroyOffscreen.cs" />
+    <Compile Include="Assets\Scripts\InstantVelocity.cs" />
     <Compile Include="Assets\Scripts\PixelPerfectCamera.cs" />
+    <Compile Include="Assets\Scripts\Spawner.cs" />
     <Compile Include="Assets\Scripts\TiledBackground.cs" />
     <Reference Include="Unity.TextMeshPro.Editor">
       <HintPath>C:/Users/Stacy.Karas/Documents/SuperZombieRunner/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
