--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -62,8 +62,12 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\AnimatedTexture.cs" />
     <Compile Include="Assets\Scripts\DestroyOffscreen.cs" />
+    <Compile Include="Assets\Scripts\GameObjectUtil.cs" />
     <Compile Include="Assets\Scripts\InstantVelocity.cs" />
+    <Compile Include="Assets\Scripts\ObjectPool.cs" />
+    <Compile Include="Assets\Scripts\Obstacle.cs" />
     <Compile Include="Assets\Scripts\PixelPerfectCamera.cs" />
+    <Compile Include="Assets\Scripts\RecycleGameObject.cs" />
     <Compile Include="Assets\Scripts\Spawner.cs" />
     <Compile Include="Assets\Scripts\TiledBackground.cs" />
     <Reference Include="Unity.TextMeshPro.Editor">
