finished up section 5 and 6

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -62,14 +62,19 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\AnimatedTexture.cs" />
     <Compile Include="Assets\Scripts\DestroyOffscreen.cs" />
+    <Compile Include="Assets\Scripts\GameManager.cs" />
     <Compile Include="Assets\Scripts\GameObjectUtil.cs" />
+    <Compile Include="Assets\Scripts\InputState.cs" />
     <Compile Include="Assets\Scripts\InstantVelocity.cs" />
+    <Compile Include="Assets\Scripts\Jump.cs" />
     <Compile Include="Assets\Scripts\ObjectPool.cs" />
     <Compile Include="Assets\Scripts\Obstacle.cs" />
     <Compile Include="Assets\Scripts\PixelPerfectCamera.cs" />
+    <Compile Include="Assets\Scripts\PlayerAnimationManager.cs" />
     <Compile Include="Assets\Scripts\RecycleGameObject.cs" />
     <Compile Include="Assets\Scripts\Spawner.cs" />
     <Compile Include="Assets\Scripts\TiledBackground.cs" />
+    <Compile Include="Assets\Scripts\TimeManager.cs" />
     <Reference Include="Unity.TextMeshPro.Editor">
       <HintPath>C:/Users/Stacy.Karas/Documents/SuperZombieRunner/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
     </Reference>
